# labs

./: json_assignment.rb
IncomePilot/: .gitignore  Makefile  README.md  claude_prompt.txt  sample_portfolio.csv
IncomePilot/backend/: .env  .env.example  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt
IncomePilot/backend/app/: __init__.py  config.py  database.py  main.py
IncomePilot/backend/migrations/: 001_add_stock_strategy.sql
IncomePilot/backend/tests/: conftest.py  test_analytics.py  test_api.py  test_mock_provider.py  test_recommendation_engine.py  test_roll_engine.py  test_scoring.py  test_tradier_provider.py  test_yahoo_provider.py
IncomePilot/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
IncomePilot/frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
PiaxisCD/: .gitignore  EXTENSION_GUIDE.md  Makefile  README.md
PiaxisCD/backend/: alembic.ini  pyproject.toml  requirements.txt
PiaxisCD/backend/alembic/: env.py
PiaxisCD/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
PiaxisCD/samples/: requirements_building.txt  requirements_room.json  requirements_room.txt
sarvam-video-translator/: .env.example  README.md  pyproject.toml  requirements.txt
sarvam-video-translator/svt/: __init__.py  __main__.py  cli.py  config.py  elevenlabs_client.py  ffmpeg_utils.py  google_client.py  pipeline.py  sarvam_client.py  subtitles.py
sarvam-video-translator/tests/: test_google_client.py  test_sarvam_client.py  test_subtitles.py
(+114 files in other folders)
